--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('assets/background/1.jpg'); 
+    background-image: url('../assets/background/1.jpg'); 
     background-size: cover;
     background-position: center;
 }
